--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <div class="work">
                             <!--───────────────card───────────────-->
                             <div class="card">
-                                <img class="work-img" src="https://storage.keiransdomains.com/@@/ksd.png">
-                                <a href="https://nitewave.net/" target="https://keiransdomains.com/">
+                                <img class="work-img" src="http://storage.keiransdomains.com/@@/ksd.png">
+                                <a href="https://keiransdomains.com/" target="https://keiransdomains.com/">
                                     <!--Link to project-->
                                     <div class="work-content">Keirans domains.</div>
                                 </a>
