--- a/index.html
+++ b/index.html
@@ -103,4 +103,4 @@
 </body>
 
 </html>
-<p hidden>keiran#9663</p>
+<p hidden>Discord keiran#9663  Please note this was not made by me but i will be making this better over time so once updates will be done it will be my</p>
