--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="work">
                             <!--───────────────card───────────────-->
                             <div class="card">
-                                <img class="work-img" src="http://storage.keiransdomains.com/@@/ksd.png">
+                                <img class="work-img" src="https://keiran.keiransdomains.com/discordicon.png">
                                 <a href="https://keiransdomains.com/" target="https://keiransdomains.com/">
                                     <!--Link to project-->
                                     <div class="work-content">Keirans domains.</div>
