--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <img class="work-img" src="https://keiran.keiransdomains.com/discordicon.png">
                                 <a href="https://keiransdomains.com/" target="https://keiransdomains.com/">
                                     <!--Link to project-->
-                                    <div class="work-content">Keirans domains.</div>
+                                    <div class="work-content">Keirans domains (Owner) </div>
                                 </a>
 
                             </div>
@@ -76,7 +76,7 @@
                                 <img class="work-img" src="https://storage.keiransdomains.com/@@/nitewave.png">
                                 <a href="https://nitewave.net/" target="https://nitewave.net/">
                                     <!--Link to project-->
-                                    <div class="work-content">Nitewave streaming.</div>
+                                    <div class="work-content">Nitewave streaming (Network Manager)</div>
                                 </a>
                             </div>
 
