--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="container">
-
+    <script src="https://retro.itsparadise.net/retro.js%22%3E </script>
        
         <header>
             <a class="logo" href="#home">
@@ -102,3 +102,4 @@
 
 </html>
 <p hidden>Discord keiran#9663  Please note this was not made by me but i will be making this better over time so once updates will be done.</p>
+            
