--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
                                     <div class="work-content">Nitewave streaming (Network Manager)</div>
                                 </a>
                             </div>
+                            
+                                                      </div>
+                            <div class="card">
+                                <img class="work-img" src="https://keiran.keiransdomains.com/white.png">
+                                <a href="https://itsparadise.net/" target="https://itsparadise.net">
+                                    <!--Link to project-->
+                                    <div class="work-content">Paradise radio (Partner)</div>
+                                </a>
+                            </div>
 
                             <div id="contact">
               
