--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 </div>
 
                 <div id="projects">
-                    <h3>My Projects.
+                    <h3>My Projects & Partners.
                         <hr>
                     </h3>
-                    <p>Here are some of my projects, you may like. Some may not be fully Owned by me.</p>
+                    <p>Here are Some Projects & Partners</p>
                     <div class="work-box">
                         <div class="work">
 
