--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Keiran's Studios</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
-    <link rel="icon" href="https://storage.keiransdomains.com/@@/plesklogo.png">
+    <link rel="icon" href="https://keiran.keiransdomains.com/logos/plesklogo.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
@@ -19,7 +19,7 @@
        
         <header>
             <a class="logo" href="#home">
-                <img src="https://storage.keiransdomains.com/@@/plesklogo.png" alt="repl logo" />
+                <img src="https://keiran.keiransdomains.com/logos/plesklogo.png" alt="keirans domains logo" />
             </a>
             <nav>
                 <ul class="nav-bar">
@@ -27,7 +27,9 @@
                     <li><a class="nav-link active" href="#home">Home</a></li>
                     <li><a class="nav-link" href="#projects">Projects</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
-                </ul>
+					<li><a class="nav-link"  heref="#">Coming soon!</a></li>
+					<li><a class="nav-link"  href="https://g3v.co/">To G3v.co</a></li> 
+				</ul>
 
                 <div class="hamburger">
                     <div class="line1"></div>
@@ -65,7 +67,7 @@
                         <div class="work">
 
                             <div class="card">
-                                <img class="work-img" src="https://keiran.keiransdomains.com/discordicon.png">
+                                <img class="work-img" src="https://keiran.keiransdomains.com/logos/discordicon.png">
                                 <a href="https://keiransdomains.com/" target="https://keiransdomains.com/">
                                     <!--Link to project-->
                                     <div class="work-content">Keirans domains (Owner) </div>
@@ -73,7 +75,7 @@
 
                             </div>
                             <div class="card">
-                                <img class="work-img" src="https://storage.keiransdomains.com/@@/nitewave.png">
+                                <img class="work-img" src="https://keiran.keiransdomains.com/logos/nitewave.png">
                                 <a href="https://nitewave.net/" target="https://nitewave.net/">
                                     <!--Link to project-->
                                     <div class="work-content">Nitewave streaming (Network Manager)</div>
