--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a class="nav-link active" href="#home">Home</a></li>
                     <li><a class="nav-link" href="#projects">Projects</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
-					<li><a class="nav-link"  heref="#">Coming soon!</a></li>
+					<li><a class="nav-link"  href="#">Coming soon!</a></li>
 					<li><a class="nav-link"  href="https://g3v.co/">To G3v.co</a></li> 
 				</ul>
 
